<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF176"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/powerButton"
        android:layout_width="120dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="143dp"
        android:layout_marginLeft="143dp"
        android:layout_marginTop="543dp"
        android:text="@string/powerButton"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/divButton"
        android:layout_width="120dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="244dp"
        android:layout_marginLeft="244dp"
        android:layout_marginTop="431dp"
        android:text="@string/divButton"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/subButton"
        android:layout_width="120dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="428dp"
        android:text="@string/subButton"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="120dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="241dp"
        android:layout_marginLeft="241dp"
        android:layout_marginTop="348dp"
        android:text="@string/addButton"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/headingLabel"
        android:layout_width="119dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="142dp"
        android:layout_marginLeft="142dp"
        android:layout_marginTop="24dp"
        android:background="#4DD0E1"
        android:text="@string/calculator"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/numberInput2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="183dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="Autofill,LabelFor,RelativeOverlap,TextFields" />

    <TextView
        android:id="@+id/inputLabel2"
        android:layout_width="119dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="186dp"
        android:background="#81C784"
        android:text="@string/input_second_number"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/inputLabel1"
        android:layout_width="119dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="109dp"
        android:background="#81C784"
        android:text="@string/input_number"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/numberInput1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="Autofill,LabelFor,RelativeOverlap,TextFields" />

    <TextView
        android:id="@+id/resultBox"
        android:layout_width="128dp"
        android:layout_height="51dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="274dp"
        android:layout_marginEnd="149dp"
        android:layout_marginRight="149dp"
        android:background="#64B5F6"
        android:lineSpacingExtra="14sp"
        android:textColor="#FFF8E1"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/modButton"
        android:layout_width="120dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="349dp"
        android:text="@string/modOperator"
        android:textSize="36sp"
        android:textStyle="bold" />

</RelativeLayout>